<resources>
    <string name="app_name">Dule</string>
    <string name="home">Главная</string>
    <string name="settings">Настройки</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back">Назад</string>
    <string name="save">Сохранить</string>
    <string name="load">Загрузка</string>
    <string name="group">Группа</string>
    <string name="institute">Институт</string>
    <string name="course">Курс</string>
    <string name="selectgroup">Выберите вашу группу</string>
    <string name="finish">Закончилось</string>
    <string name="search">Поиск</string>
    <string name="news">Новости</string>
    <string name="cabinet">ЛК</string>
    <string name="type">Тип</string>
    <string name="time">Время</string>
    <string name="day">День</string>
    <string name="week">Неделя</string>
    <string name="apply">Применить</string>

    <string-array name="daysOfWeek">
        <item>Понедельник</item>
        <item>Вторник</item>
        <item>Среда</item>
        <item>Четверг</item>
        <item>Пятница</item>
        <item>Суббота</item>
        <item>Воскресенье</item>
    </string-array>
    <string-array name="dermovoeTime">
        <item>8.15</item>
        <item>9.55</item>
        <item>11.35</item>
        <item>13.15</item>
        <item>13.45</item>
        <item>15.25</item>
        <item>17.05</item>
        <item>18.50</item>
        <item>20.30</item>


    </string-array>
    <string-array name="times">
        <item>Время</item>
        <item>8.15-9.45</item>
        <item>9.55-11.25</item>
        <item>11.35-13.05</item>
        <item>13.15-14.45</item>
        <item>13.45-15.15</item>
        <item>15.25-16.55</item>
        <item>17.05-18.35</item>
        <item>18.50-20.20</item>
        <item>20.30-22.00</item>
    </string-array>
    <string-array name="type">
        <item>Тип</item>
        <item>ЛЗ/ПЗ</item>
        <item>Лекция</item>
    </string-array>
    <string-array name="week">
        <item>Неделя</item>
        <item>Четная</item>
        <item>Нечётная</item>
    </string-array>
    <string-array name="day">
        <item>День</item>
        <item>Понедельник</item>
        <item>Вторник</item>
        <item>Среда</item>
        <item>Четверг</item>
        <item>Пятница</item>
        <item>Суббота</item>
    </string-array>
    <string-array name="course">
        <item>Курс</item>
        <item>Курс-1</item>
        <item>Курс-2</item>
        <item>Курс-3</item>
        <item>Курс-4</item>
    </string-array>

</resources>