<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/home"
        android:orderInCategory="1"
        android:title="@string/home" />
    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/search"
        android:orderInCategory="2"
        android:title="@string/search" />
    <item
        android:id="@+id/menu_news"
        android:icon="@drawable/newspaper"
        android:orderInCategory="3"
        android:title="@string/news" />
    <item
        android:id="@+id/menu_cabinet"
        android:icon="@drawable/guu"
        android:orderInCategory="4"
        android:title="@string/cabinet" />
    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/settings"
        android:orderInCategory="5"
        android:title="@string/settings" />
</menu>