<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsFragment">

    <LinearLayout
        android:id="@+id/sgLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="24dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:gravity="center"
            android:text="@string/selectgroup"
            android:textColor="@color/black"
            android:textSize="25sp" />


        <TextView
            android:id="@+id/sgCourseTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/course"
            android:textColor="#000000"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/sgSpinnerCourse"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="10dp"
            android:clickable="true"
            android:scrollbarStyle="insideOverlay"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/sgIntituteTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/institute"
            android:textColor="#000000"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/sgSpinnerInstitute"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="10dp"
            android:clickable="false"
            android:scrollbarStyle="insideOverlay"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/sgGroupTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/group"
            android:textColor="#000000"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/sgSpinnerGroup"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="10dp"
            android:clickable="false"
            android:scrollbarStyle="insideOverlay"
            tools:ignore="SpeakableTextPresentCheck" />

        <LinearLayout
            android:id="@+id/sgProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center">

            <TextView
                android:id="@+id/sgProgressBarTv"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_margin="5dp"
                android:text="@string/load" />

            <ProgressBar
                android:id="@+id/sgProgressBarPb"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

        <Button
            android:id="@+id/sgButtonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:enabled="false"
            android:text="@string/save"
            android:textSize="18sp" />

        <Button
            android:id="@+id/sgButtonBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/back"
            android:textSize="18sp" />

    </LinearLayout>

</FrameLayout>